# mpc_controller

./: .gitignore  README.md  optimized_trajectory.csv  package.xml  requirements.txt  setup.py
Matlab/: BicycleKinematicModel.slx  MPC.slx  MPC.slxc  Road1.m  Road1.mat
Matlab/slprj/_sfprj/EMLReport/: 5IEKamz1yGXxfjKnJJi8sH.mat  emlReportAccessInfo.mat  s9ATW8FCR851db5gpMUH42F.mat  sZtZA01bJaU2ZeWQ1RdxtPD.mat
Matlab/slprj/_sfprj/MPC/: amsi_serial.mat
Matlab/slprj/_sfprj/MPC/_self/sfun/info/: binfo.mat
Matlab/slprj/sim/varcache/MPC/: checksumOfCache.mat  varInfo.mat
Matlab/slprj/sim/varcache/MPC/tmwinternal/: simulink_cache.xml
config/: config.py  params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mpc_controller/share/mpc_controller/: package.dsv  package.ps1  package.sh  package.xml
launch/: mpc_controller.launch.py  mpc_launch.py
log/: latest_build
mpc_controller/: MPC_Controller.py  MPCtrlNode.py  input_trajectory.csv  mansour_3_out.csv  mpc_controller.py  mpc_node.py  optimize_trajectoryMPC.py
mpc_controller/src/mpc_controller/: MPC_Controller.py  MPCtrlNode.py
src/: MPC_Controller.py  MPCtrlNode.py
src/launch/: mpc_controller.launch.py
utils/: utils.py
